<resources>
    <string name="app_name">西大植语</string>
    <string name="splash_top_text">遇见.西大植物</string>
    <string name="splash_bottom_text_top">西南大学校园景观植物分布地图</string>
    <string name="splash_bottom_text_bottom">西南大学版权所有©</string>

    <string name="login_phone">请输入手机号</string>
    <string name="login_verification_code">请输入验证码</string>
    <string name="button_login">登录</string>
    <string name="login_bottom_text">登录即代表同意《用户协议》</string>
    <string name="get_verification_code">立即获取</string>
    
    <string name="campus_map">校园地图</string>
    <string name="fuzzy_retrieval">模糊检索</string>
    <string name="plant_flora">植物图志</string>
    <string name="favorite">收藏夹</string>

    <string name="angiosperm">被子植物</string>
    <string name="gymnosperm">裸子植物</string>
    <string name="fern">蕨类植物</string>
    <string name="bamboo">竹类植物</string>

    <string name="query_content">查询名称</string>
    <string name="query">查询</string>

    <string name="habit">习性</string>
    <string name="stem">茎</string>
    <string name="thorn">刺</string>
    <string name="milk">乳汁</string>
    <string name="stipule">托叶</string>
    <string name="leaf_appearance">叶外观</string>
    <string name="leaf_bearing_form">叶着生形式</string>
    <string name="petiole">叶柄</string>
    <string name="vein">叶脉</string>
    <string name="leaf_margin">叶缘</string>
    <string name="flower">花(序)</string>
    <string name="fruit">果实</string>
    <string name="ok">确定</string>

    <string name="search_hint">请输入植物名称</string>

    <string name="my_favorite">我的收藏</string>
    <string name="batch_manage">批量管理</string>
    <string name="cancel_manage">取消管理</string>
    <string name="all_select">全选</string>
    <string name="none_select">反选</string>
    <string name="delete">删除</string>

    <string name="angiosperm_fuzzy_search">被子植物模糊检索</string>
    <string name="angiosperm_fuzzy_search_result">被子植物模糊检索结果</string>

    <string name="indetermination">不确定</string>
    <string name="help_menu">帮助</string>

    <string name="hint_login_username">请输入账号</string>
    <string name="hint_login_password">输入密码</string>
    <string name="hint_new_password">输入新密码</string>
    <string name="hint_affirm_new_password">确认新密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="submit">提交</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="please_input_limit_pwd">请输入数字或字母</string>

    <string name="contact_service">联系客服</string>
    <string name="about_us">关于我们</string>
    <string name="qq_number">qq:729368173</string>
    <string name="email">邮箱:ruanyandongai@gmail.com</string>
    <string name="phone_number">电话:18983790146</string>

    <string name="collection_success">收藏成功</string>
    <string name="cancel_collection">取消收藏</string>

    <string name="around_plant">附近植物种类</string>
</resources>
