<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorGreen">
        <TextView
            android:id="@+id/myFavoriteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_favorite"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textColor="@android:color/holo_blue_light"
            android:layout_margin="5dp" />

        <TextView
            android:id="@+id/batch_manage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batch_manage"
            android:textSize="16sp"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/myFavoriteList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <LinearLayout
        android:id="@+id/manage_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/all_select"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/all_select"
            android:textSize="16sp"
            android:textColor="@android:color/holo_green_light"
            android:gravity="center" />
        <TextView
            android:id="@+id/none_select"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/none_select"
            android:textColor="@android:color/holo_green_light"
            android:textSize="16sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/delete"
            android:textColor="@android:color/holo_green_light"
            android:textSize="16sp"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>