<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angiosperm_fuzzy_search"
                android:layout_centerInParent="true"
                android:textSize="22sp"
                android:textColor="@android:color/black"/>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/habit"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/fuzzy_retrieval_button_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:clickable="false"/>
        <Spinner
            android:id="@+id/habit"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:entries="@array/habit">
        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/stem"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/fuzzy_retrieval_button_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:clickable="false"/>
        <Spinner
            android:id="@+id/stem"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:entries="@array/stem">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/thorn"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/fuzzy_retrieval_button_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:clickable="false"/>
        <Spinner
            android:id="@+id/thorn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:entries="@array/thorn">
        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/milk"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/fuzzy_retrieval_button_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:clickable="false"/>
        <Spinner
            android:id="@+id/milk"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:entries="@array/milk">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/stipule"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/fuzzy_retrieval_button_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:clickable="false"/>
        <Spinner
            android:id="@+id/stipule"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:entries="@array/stipule">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/leaf_appearance"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/fuzzy_retrieval_button_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:clickable="false"/>
        <Spinner
            android:id="@+id/leaf_appearance"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:entries="@array/leaf_appearance">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/leaf_bearing_form"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/fuzzy_retrieval_button_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:clickable="false"/>
        <Spinner
            android:id="@+id/leaf_bearing_form"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:entries="@array/leaf_bearing_form">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/petiole"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/fuzzy_retrieval_button_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:clickable="false"/>
        <Spinner
            android:id="@+id/petiole"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:entries="@array/petiole">
        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/vein"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/fuzzy_retrieval_button_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:clickable="false"/>
        <Spinner
            android:id="@+id/vein"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:entries="@array/vein">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/leaf_margin"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/fuzzy_retrieval_button_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:clickable="false"/>
        <Spinner
            android:id="@+id/leaf_margin"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:entries="@array/leaf_margin">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/flower"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/fuzzy_retrieval_button_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:clickable="false"/>
        <Spinner
            android:id="@+id/flower"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:entries="@array/flower">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/fruit"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/fuzzy_retrieval_button_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:clickable="false"/>
        <Spinner
            android:id="@+id/fruit"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:entries="@array/fruit">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/ok"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/ok"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/fuzzy_retrieval_button_style"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

</LinearLayout>