<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/splash_image"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_image"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_top_text"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="36sp"/>



    </LinearLayout>



    <!--<TextView
        android:id="@+id/start_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="开启奇妙之旅"
        android:padding="5dp"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/splash_start_textview_style"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_bottom_text_top"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_bottom_text_bottom"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="25sp"/>

    </LinearLayout>
</RelativeLayout>